--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 html {
-
     height: 100%;
     font-family: Oswald;
 }
@@ -40,21 +39,10 @@ body {
     margin-top: 10px;
 }
 
-
 .floorfade {
-  display:inline-block;
-   background: 
-    linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.7)
-    );
-    background: 
-    -webkit-linear-gradient(
-      top,
-      rgba(0, 0, 0, 0),
-      rgba(0, 0, 0, 0.7)
-    );
+    display: inline-block;
+    background: linear-gradient( to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+    background: -webkit-linear-gradient( top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
 }
 
 .bg {
@@ -62,8 +50,6 @@ body {
     display: block;
     top: 0px;
     z-index: -1;
-    /*-webkit-transform: translateZ(0);*/
-    
 }
 
 .xlarge {
@@ -73,7 +59,6 @@ body {
     font-size: 248px;
     color: #FFF;
     /* Fallback for older browsers */
-    
     color: rgba(255, 255, 255, 0.3);
     width: 100%;
     white-space: nowrap;
@@ -85,10 +70,10 @@ body {
     bottom: 180px;
     font-family: 'Oswald', sans-serif;
     font-size: 150px;
-    font-weight: 600;
+    font-weight: 700;
     color: white;
     width: 100%;
-        line-height: 1em;
+    line-height: 1em;
     text-shadow: 0 1px 0 black;
 }
 
@@ -97,33 +82,51 @@ body {
     bottom: 100px;
     font-family: 'Oswald', sans-serif;
     font-size: 50px;
-    font-weight: 200;
+    font-weight: 400;
     color: #FFF;
     width: 100%;
-        text-shadow: 0 1px 0 black;
+    text-shadow: 0 1px 0 black;
+}
 
+.timeTime {
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    font-weight: 300;
+    color: #FFF;
+    width: 100%;
+    text-shadow: 0 1px 0 black;
+}
+
+.loadingText {
+    font-family: 'Oswald', sans-serif;
+    font-size: 50px;
+    font-weight: 300;
+    color: #FFF;
+    width: 100%;
+    text-shadow: 0 1px 0 black;
 }
 
 .centerTitle {
-  text-align: center;
+    text-align: center;
 }
 
-/*no slides*/
 
+/*no slides*/
 
 .outer {
     padding-left: 10%;
     padding-right: 10%;
-        background-color: #1976D2;
 
+    background-color: #1976D2;
 }
 
 .flex-contain {
     display: flex;
     flex-direction: column;
-  
     margin: auto;
     height: 100vh;
+    padding-top: 30%;
+
 }
 
 span {
@@ -136,10 +139,12 @@ span {
 
 #clear {
     margin: auto;
-    font-size: 16px; 
-    color: #FFF; 
+    font-size: 16px;
+    color: #FFF;
     font-weight: 200;
 }
+
+
 /*
 .slide-animation {
     -webkit-transform: translateZ(0);;
